--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,9 +1,9 @@
-#############################
-# MoChainMining | 墨云连锁   #
-# 还没弄好的github链接
-# OpenMoPlugins Project
-# Documents:没整好
-#############################
+################################################################
+# MoChainMining | 墨云连锁                                      #
+# Github: https://github.com/moran0710/MoChainMining           #
+# OpenMoPlugins Project                                        #
+# Documents: https://openmo.molab.top/bukkit/moChainMining/    #
+################################################################
 
 # 全局设置
 global:
